syntax = "proto3";

option go_package = "./speedup";

package speedup;

//import "google/protobuf/timestamp.proto";

message RequestDataKey {
  string key = 1;
}

message ResponseDataValue {
  string value = 1;
  bool found = 2;
  string exception = 3;
}

message RequestDataKeyValue {
  string key = 1;
  string value = 2;
}

message RequestDataKeyList {
  repeated RequestDataKey requestDataKeyList = 1;
}

message ResponseDataValueList {
  repeated ResponseDataValue responseDataValueList = 1;
  string exception = 2;
}

message ResponseEmpty {
  string exception = 1;
}

service DataService {
  rpc GetsData (RequestDataKeyList) returns (ResponseDataValueList){}
  rpc GetData (RequestDataKey) returns (ResponseDataValue){}
  rpc SetData (RequestDataKeyValue) returns (ResponseEmpty){}
}